force-app/main/default/objects/Disc_Information__c/Disc_Information__c.object-meta.xml
<CustomObject>
    <label>RD Disc Information</label>
    <nameField>
        <label>RD Disc Information</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Disc Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>