force-app/main/default/objects/Disc_Information__c/fields/MfgRngUL__c.field-meta.xml
<CustomField>
    <fullName>MfgRngUL__c</fullName>
    <label>MfgRngUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>