force-app/main/default/objects/Disc_Information__c/fields/SCStripThck__c.field-meta.xml
<CustomField>
    <fullName>SCStripThck__c</fullName>
    <label>SCStripThck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>