force-app/main/default/objects/Disc_Information__c/fields/SealThck__c.field-meta.xml
<CustomField>
    <fullName>SealThck__c</fullName>
    <label>SealThck</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>