force-app/main/default/objects/Disc_Information__c/fields/SlotCovMatl__c.field-meta.xml
<CustomField>
    <fullName>SlotCovMatl__c</fullName>
    <label>SlotCovMatl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>