force-app/main/default/objects/Disc_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OutLinerMatl__c</columns>
    <columns>OutLinerThck__c</columns>
    <columns>SealMatl__c</columns>
    <columns>SealThck__c</columns>
    <columns>SecondSealMatl__c</columns>
    <columns>SlotCovMatl__c</columns>
    <columns>SlotCovThck__c</columns>
    <columns>SZC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>